--- a/src/components/Admin/MenuSider/MenuSider.scss
+++ b/src/components/Admin/MenuSider/MenuSider.scss
@@ -1,21 +1,46 @@
 @import "../../../scss/index.scss";
 
-// .sider {
+.sider {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  max-height: 100%;
+  color: black;
+  width: 100%;
+  padding-top: 3rem;
+  background-color: rgb(34, 34, 34);
+}
 
-//   &__row{
-//     display: flex;
-//     flex-direction: row;
-//     color: white;
-//     padding-left: 2rem;
-//     text-decoration: none;
-//     background-color: blue;
-//   }
-  
-//   &__icon{
 
-//   }
-//   &__icon{
-    
-//   }
- 
-// }
+.row {
+  margin: 0;
+  padding:0;
+  margin-bottom: 1rem;
+  color: white;
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-radius: 5px;
+  height: 2.5rem;
+  background-color: rgb(87, 87, 87);
+  width: 70%;
+}
+
+.row:hover,
+.active {
+  background-color: blue
+}
+
+.active {
+  background-color: green
+}
+
+.MuiSvgIcon-root {
+  margin-left: 0.5rem;
+}
+
+.text {
+
+  margin-left: 0.5rem;
+}
