--- a/src/layouts/layoutStyles.scss
+++ b/src/layouts/layoutStyles.scss
@@ -1,44 +1,55 @@
 @import "../scss/index.scss";
 
-.layout-admin{
-  transition: margin-left 0.2s;
+.layout-admin {
   display: grid;
   height: 100vh;
   grid-template-areas:
-  "header header"
-  "sidebar content"
-  "sidebar footer";
+    "header header"
+    "sidebar content"
+    "sidebar footer";
   grid-template-columns: 200px 1fr;
   grid-template-rows: 76px 1fr 50px;
+}
 
-  &__sidebar {
-    grid-area: sidebar;
-    background-color: black;
-    
-  }
+.layout-admin-closed {
+  display: grid;
+  height: 100vh;
+  grid-template-areas:
+    "header"
+    "content"
+    "footer";
+  grid-template-columns: 1fr;
+  grid-template-rows: 76px 1fr 50px;
+}
 
-  &__header {
-    background-color: black;
-    grid-area: header;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    //   padding: 0;
-    //   height: 65px;
-    //   background-color: gray;
-  }
+.layout-admin__sidebar {
+  grid-area: sidebar;
+  display: flex;
+  justify-content: center;
+  background-color: white;
+}
 
-  &__content {
-    background-color: rgb(66, 66, 204);
-    grid-area: content;
-    //   min-height: calc(100vh - 176px); // resto tamaño del header
-    //   padding: 90px 25px 25px 25px;
-    //   background-color: yellow;
-  }
+.layout-admin__header {
+  background-color: black;
+  grid-area: header;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  //   padding: 0;
+  //   height: 65px;
+  //   background-color: gray;
+}
 
-  &__footer {
-    background-color: rgb(202, 202, 130);
-    grid-area: footer;
-    //   padding: 20px;
-  }
+.layout-admin__content {
+  background-color: rgb(66, 66, 204);
+  grid-area: content;
+  //   min-height: calc(100vh - 176px); // resto tamaño del header
+  //   padding: 90px 25px 25px 25px;
+  //   background-color: yellow;
+}
+
+.layout-admin__footer {
+  background-color: rgb(202, 202, 130);
+  grid-area: footer;
+  //   padding: 20px;
 }
