--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -23,6 +23,7 @@ $border-dark: #000;
 
 $background-light: #fff;
 $background-grey-light: #e8e8e8;
+$background-grey-light2: #d8d8d8;
 $background-grey: #808080;
 $background-grey-dark: #595959;
 $background-dark-light: #252527;
