Formulario maquetado, manejo de errores, objeto relleno y validado

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -23,7 +23,7 @@ $border-dark: #000;
 
 $background-light: #fff;
 $background-grey-light: #e8e8e8;
-$background-grey-light2: #d8d8d8;
+$background-grey-light2: #c7c7c7;
 $background-grey: #808080;
 $background-grey-dark: #595959;
 $background-dark-light: #252527;
@@ -34,7 +34,7 @@ $background-dark-web: #16202b;
 $background-dark-light-web: #1a2734;
 
 $success: #84b84c;
-$error: #f00;
+$error: #ff0000;
 
 // Social Color
 $youtube: #cd201f;
