--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,11 @@
 @import "./scss/index.scss";
 
+.success { 
+  border: 1px solid $success !important;
+  background-color: $background-success;
+}
+
+.error{
+  border: 2px solid $error !important; 
+  background-color: $background-error;
+}
