--- a/src/pages/Admin/SignIn.scss
+++ b/src/pages/Admin/SignIn.scss
@@ -48,6 +48,7 @@ img {
   width: 50%;
   justify-content: center;
   align-content: center;
+  cursor: pointer;
 }
 
 .active{
@@ -78,11 +79,12 @@ img {
   align-items: center;
   margin: 0;
   font-weight: 600;
+  font-size: 0em + 20px / $defaultFontSize;
 }
 
 .tab-content{
   background-color: white;
-  padding: 0 16px 16px 16px;
+  padding: 16px 16px 16px 16px;
   text-align: center;
 }
 
