--- a/src/components/Admin/RegisterForm/RegisterForm.scss
+++ b/src/components/Admin/RegisterForm/RegisterForm.scss
@@ -1,6 +1,7 @@
 @import '../../../scss/variables';
 
-.register-form {
+.container-form {
+  padding:30px 15px 15px 15px;
   display: flex;
   flex-grow: 1;
   align-items: flex-start;
@@ -19,11 +20,7 @@
   border-radius: 3px;
   width: 100%;
   height: 35px;
-  margin-bottom: 25px;
-}
-
-.input-container:nth-child(3) {
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 .input-container:hover {
@@ -32,6 +29,7 @@
 
 .input-container:focus-within {
   border: 2px solid $primary-color;
+  background-color: $primary-color-ultra-light;
 }
 
 svg {
@@ -47,8 +45,8 @@ input.data-input {
   display: inherit;
   flex-grow: inherit;
   border: none;
-  color: $background-grey;
-  font-size: 0em + 17px / $defaultFontSize;
+  color: black;
+  font-size: 0em + 19px / $defaultFontSize;
   background-color: transparent;
 }
 
@@ -65,7 +63,7 @@ input.data-input {
   justify-content: flex-start;
   align-items: center;
   height: 25px;
-  margin-bottom: 25px;
+  margin-bottom: 10px;
 }
 
 input[type="checkbox"] {
@@ -88,13 +86,14 @@ input:focus {
 }
 
 button {
+  margin-top: 10px;
   background-color: $primary-color;
   color: $font-light;
   border-radius: 5px;
   border: 1px solid $background-grey-light2;
   height: 42px;
   width: 100%;
-  font-size: 0em + 15px / $defaultFontSize;
+  font-size: 0em + 18px / $defaultFontSize;
   cursor: pointer;
 }
 
