--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,7 +2,8 @@ $defaultFontSize: 16px;
 
 $primary-color: #0098d3;
 $primary-color-hover: #0280b3;
-$primary-color-light: #6ec1e4;
+$primary-color-light: #b9d5ff;
+$primary-color-ultra-light: #eaf9ff;
 $primary-color-dark: #8698a5;
 
 $menu-color: #252527;
