--- a/src/pages/Admin/SignIn.scss
+++ b/src/pages/Admin/SignIn.scss
@@ -16,13 +16,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  // justify-content: center;
   min-height: 100vh;
   width: 100%;
 }
 
 .logo {
   padding: 60px 20px;
-  width: 50%;
+  width: 100%;
+  max-width: 400px;
 }
 
 img {
