--- a/src/components/Admin/MenuSider/MenuSider.scss
+++ b/src/components/Admin/MenuSider/MenuSider.scss
@@ -1,42 +1,43 @@
 @import "../../../scss/index.scss";
 
-.sider {
+.menu-sider {
   transition: width 0.3s;
-  display:flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
   width: 15%;
   padding-top: 6rem;
   background-color: black;
-}
 
-.row {
-  margin: 0;
-  padding:0;
-  color: white;
-  text-decoration: none;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  height: 2.2rem;
-  width: 100%;
-  overflow: hidden;
-}
+  .menu-sider-row {
+    margin: 0;
+    padding: 0;
+    color: white;
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 2.2rem;
+    width: 100%;
+    overflow: hidden;
 
-.row:hover{
-  background-color: blue;
-}
-.active {
-  background-color: blue;
-}
+    .menu-sider-text {
+      transition: color 0.3s;
+      font-size: 0.8rem;
+      margin-left: 0.5rem;
+    }
+  }
 
-.MuiSvgIcon-root{
-  font-size: 1rem !important;
-  margin-left: 1.5rem;
-}
+  .menu-sider-row:hover {
+    background-color: blue;
+  }
 
-.text{
-  transition: color 0.3s;
-  font-size: 0.8rem;
-  margin-left: 0.5rem;
+  .active {
+    background-color: blue;
+  }
+
+  svg.MuiSvgIcon-root {
+    font-size: 1rem !important;
+    margin-left: 1.5rem;
+  }
 }
