--- a/src/components/Admin/RegisterForm/RegisterForm.scss
+++ b/src/components/Admin/RegisterForm/RegisterForm.scss
@@ -1,111 +1,112 @@
 @import '../../../scss/variables';
 
 .container-form {
-  padding:30px 15px 15px 15px;
+  padding: 30px 15px 15px 15px;
   display: flex;
   flex-grow: 1;
   align-items: flex-start;
   justify-content: flex-start;
   flex-direction: column;
   align-items: center;
-}
 
-.input-container {
-  display: flex;
-  flex-grow: 1;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid $background-grey-light2;
-  border-radius: 3px;
-  width: 100%;
-  height: 35px;
-  margin-bottom: 20px;
-}
 
-.input-container:hover {
-  border: 1px solid $primary-color;
-}
+  .input-container-form {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid $background-grey-light2;
+    border-radius: 3px;
+    width: 100%;
+    height: 35px;
+    margin-bottom: 20px;
 
-.input-container:focus-within {
-  border: 2px solid $primary-color;
-  background-color: $primary-color-ultra-light;
-}
+    svg {
+      padding: 0 !important;
+      margin-left: 7px !important;
+      margin-right: 5px;
+      color: $background-grey-light2;
+      width: auto !important;
+      height: 65% !important;
+    }
 
-svg {
-  padding: 0 !important;
-  margin-left: 7px !important;
-  margin-right: 5px;
-  color: $background-grey-light2;
-  width: auto !important;
-  height: 65% !important;
-}
+    .data-input-form {
+      display: inherit;
+      flex-grow: inherit;
+      border: none;
+      color: black;
+      font-size: 0em + 19px / $defaultFontSize;
+      background-color: transparent;
+    }
 
-input.data-input {
-  display: inherit;
-  flex-grow: inherit;
-  border: none;
-  color: black;
-  font-size: 0em + 19px / $defaultFontSize;
-  background-color: transparent;
-}
+    .data-input-form:focus {
+      outline: none !important;
+    }
 
-::placeholder {
-  color: $background-grey-light2;
-  opacity: 1;
-}
+    .data-input-form::placeholder {
+      color: $background-grey-light2;
+      opacity: 1;
+    }
+  }
 
-.checkbox-container {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: auto;
-  justify-content: flex-start;
-  align-items: center;
-  height: 25px;
-  margin-bottom: 10px;
-}
+  .input-container-form:hover {
+    border: 1px solid $primary-color;
+  }
 
-input[type="checkbox"] {
-  border: none ;
-  height: 0.9em;
-  width: 0.9em;
-  cursor: pointer;
-}
+  .input-container-form:focus-within {
+    border: 2px solid $primary-color;
+    background-color: $primary-color-ultra-light;
+  }
 
-input:focus {
-  outline: none !important;
-}
 
-.label-conditions {
-  display: flex;
-  width: 100%;
-  margin-left: 10px;
-  font-size: $defaultFontSize;
-  padding-bottom: 3px;
-}
+  .checkbox-container-form {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: auto;
+    justify-content: flex-start;
+    align-items: center;
+    height: 25px;
+    margin-bottom: 10px;
 
-button {
-  margin-top: 10px;
-  background-color: $primary-color;
-  color: $font-light;
-  border-radius: 5px;
-  border: 1px solid $background-grey-light2;
-  height: 42px;
-  width: 100%;
-  font-size: 0em + 18px / $defaultFontSize;
-  cursor: pointer;
-}
+    input[type="checkbox"] {
+      border: none;
+      height: 0.9em;
+      width: 0.9em;
+      cursor: pointer;
+    }
 
-button:hover{
-  background-color: $primary-color-hover;
-  color: $font-light;
-}
+    .label-conditions {
+      display: flex;
+      width: 100%;
+      margin-left: 10px;
+      font-size: $defaultFontSize;
+      padding-bottom: 3px;
+    }
+  }
 
-button:focus,
-button:active{
-  background-color: $primary-color;
-  color: $font-light;
-  outline:none;
-}
+  .button-form {
+    margin-top: 10px;
+    background-color: $primary-color;
+    color: $font-light;
+    border-radius: 5px;
+    border: 1px solid $background-grey-light2;
+    height: 42px;
+    width: 100%;
+    font-size: 0em + 18px / $defaultFontSize;
+    cursor: pointer;
+  }
 
+  .button-form:hover {
+    background-color: $primary-color-hover;
+    color: $font-light;
+  }
+
+  .button-form:focus,
+  .button-form:active {
+    background-color: $primary-color;
+    color: $font-light;
+    outline: none;
+  }
+}
