Migrada autenticación a Hook + context, aplicada autenticación y redirección en login + logout

--- a/src/components/Admin/MenuSider/MenuSider.scss
+++ b/src/components/Admin/MenuSider/MenuSider.scss
@@ -29,11 +29,11 @@
   }
 
   .menu-sider-row:hover {
-    background-color: blue;
+    background-color: $menu-color-item-hover;
   }
 
   .active {
-    background-color: blue;
+    background-color: $menu-color-item;
   }
 
   svg.MuiSvgIcon-root {
