--- a/src/components/Admin/RegisterForm/RegisterForm.scss
+++ b/src/components/Admin/RegisterForm/RegisterForm.scss
@@ -78,7 +78,7 @@
     }
 
     .label-conditions {
-      display: flex;
+      text-align: left;
       width: 100%;
       margin-left: 10px;
       font-size: $defaultFontSize;
