--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,6 +5,8 @@ $primary-color-hover: #0280b3;
 $primary-color-light: #b9d5ff;
 $primary-color-ultra-light: #eaf9ff;
 $primary-color-dark: #8698a5;
+$menu-color-item: #167bff;
+$menu-color-item-hover: #005bd1;
 
 $menu-color: #252527;
 
