--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,8 +5,13 @@ $primary-color-hover: #0280b3;
 $primary-color-light: #b9d5ff;
 $primary-color-ultra-light: #eaf9ff;
 $primary-color-dark: #8698a5;
-$menu-color-item: #167bff;
-$menu-color-item-hover: #005bd1;
+$menu-color-item: #0099ff;
+$menu-color-item-hover: #0073c0;
+$menu-color-item-warning: #f0ad4e;
+$menu-color-item-warning-hover: #dd942d;
+$menu-color-item-danger: #d9534f;
+$menu-color-item-danger-hover: #c03a35;
+
 
 $menu-color: #252527;
 
