--- a/src/components/Admin/Users/ListUsers/ListUsers.scss
+++ b/src/components/Admin/Users/ListUsers/ListUsers.scss
@@ -1,16 +1,26 @@
  @import '../../../../scss/variables';
 
- .list-users-switch {
-   display: flex;
-   flex-direction: row;
-   justify-content: flex-start;
-   align-items: center;
-   margin-bottom: 20px;
+ .list-users {
+   .list-user-header {
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+     margin-bottom: 15px;  
 
-   span {
-     margin: 0;
+     .list-users-switch {
+       display: flex;
+       flex-direction: row;
+       justify-content: flex-start;
+       align-items: center;
+
+       span {
+         margin: 0;
+       }
+     }
    }
  }
+
+
 
 
  .list-user-card {
@@ -19,7 +29,7 @@
    display: flex;
    flex-direction: row;
    justify-content: stretch;
-   align-items:center;
+   align-items: center;
    flex-wrap: wrap;
    padding: 15px;
    //  border: 1px solid gray;
@@ -28,10 +38,12 @@
      display: flex;
      justify-content: center;
      align-items: center;
+     position: unset !important;
 
      .MuiAvatar-root,
      .MuiAvatar-circle,
      .MuiAvatar-colorDefault {
+       position: unset;
        height: 4rem;
        width: 4rem;
      }
