--- a/src/components/Admin/Courses/CoursesList/CoursesList.scss
+++ b/src/components/Admin/Courses/CoursesList/CoursesList.scss
@@ -5,7 +5,8 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    margin-bottom: 20px;
+    margin-top: 5px;
+    margin-bottom: 15px;
   }
 
   &__items {
