Maquetación del editor de post + guardado en DB

--- a/src/components/Admin/Blog/PostsList/PostsList.scss
+++ b/src/components/Admin/Blog/PostsList/PostsList.scss
@@ -1,4 +1,7 @@
 @import "../../../../scss/index.scss";
 
 .posts-list {
+  .ant-list-item{
+    border-bottom: 1px solid $border-grey-light;
+  }
 }
