Arreglar formulario edición en admin blog

--- a/src/components/Web/Footer/NavigationFooter/NavigationFooter.scss
+++ b/src/components/Web/Footer/NavigationFooter/NavigationFooter.scss
@@ -7,7 +7,7 @@
   .ant-row {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
 
     h3 {
       color: $font-light;
