--- a/src/components/Admin/Blog/PostsList/PostsList.scss
+++ b/src/components/Admin/Blog/PostsList/PostsList.scss
@@ -10,20 +10,23 @@
       width: 100%;
       justify-content: flex-start;
 
-       .date {
-        flex-direction: row;
+      .date {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         font-size: 15px;
         color: $font-light;
         background-color: $primary-color;
         border-radius: 5px;
         padding: 5px 10px;
+        width: 10rem;
       }
-      .title{
+
+      .title {
+        font-weight: bold;
         font-size: 1.2rem;
         margin-left: 5rem;
       }
-      
-
     }
   }
 }
