--- a/src/components/Web/MenuTop/MenuTop.scss
+++ b/src/components/Web/MenuTop/MenuTop.scss
@@ -7,9 +7,11 @@
   border: 0;
   display: flex;
   align-items: center;
+  margin-top: 1rem;
 
   li {
     border: 0 !important;
+    
 
     a {
       color: #fff !important;
