--- a/src/components/Web/MainBanner/MainBanner.scss
+++ b/src/components/Web/MainBanner/MainBanner.scss
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  text-align: center;
 
   &__dark {
     position: absolute;
