--- a/src/components/Web/MenuTop/MenuTop.scss
+++ b/src/components/Web/MenuTop/MenuTop.scss
@@ -1,13 +1,11 @@
 @import "../../../scss/index.scss";
 
 .menu-top-web {
-  position: sticky;
-  top: 0;
   background-color: $background-dark-web;
   border: 0;
   display: flex;
   align-items: center;
-  margin-top: 1rem;
+  margin: 5px 0;
 
   li {
     border: 0 !important;
