--- a/src/pages/Admin/SignIn.scss
+++ b/src/pages/Admin/SignIn.scss
@@ -20,7 +20,8 @@
     width: 100%;
 
     .logo-signin {
-      margin-top: 10rem;
+      margin-top: 6rem;
+      margin-bottom: 5rem;
       width: 100%;
       max-width: 400px;
 
